--- a/index.Rmd
+++ b/index.Rmd
@@ -38,15 +38,17 @@ text-align: justify
 I'm broadly interested in statistical/spatial ecology and wildlife conservation. I'm currently working on mammal abundance and distribution modeling to improve wildlife management, focusing on human-animal interactions and monitoring programs design. I mostly use Bayesian inference in combination with cartographic tools.
 
 
-## Links
+## Some links...
 
-1. my github profile [https://github.com/jabiologo](https://github.com/jabiologo)
+1. My github profile [https://github.com/jabiologo](https://github.com/jabiologo)
 
-2. my [blog](https://allthiswasfield.blogspot.com/)
+2. An old-fashioned [blog](https://allthiswasfield.blogspot.com/) with R code for outreach.
 
-3. the rWind R package [CRAN link](https://cran.r-project.org/web/packages/rWind/index.html).
+3. The rWind R package [CRAN link](https://cran.r-project.org/web/packages/rWind/index.html).
 
-4. more research in my [Google Schoolar](https://scholar.google.es/citations?hl=es&user=v3biyuIAAAAJ)
+3. The abmR R package [CRAN link](https://cran.r-project.org/web/packages/abmR/index.html).
+
+4. A list of scientific publications in my [Google Schoolar](https://scholar.google.es/citations?hl=es&user=v3biyuIAAAAJ) profile
 
 </div>
 <div class="col-sm-6">
