--- a/references.bib
+++ b/references.bib
@@ -8,7 +8,7 @@
   doi =           {10.1111/j.0006-341X.2004.00142.x},
 }
 
-@article{rwind2019,
+@article{Fernández-López_2019,
   author = {J. Fernández-López and K. Schliep},
 title = {rWind: download, edit and include wind data in ecological and evolutionary analysis},
 journal = {Ecography},
@@ -23,7 +23,7 @@ abstract = {1) Wind connectivity has been identified as a key factor driving man
 year = {2019}
 }
 
-@article{IMA2019,
+@article{Fernández-López_2019b,
   author = {J. Fernández-López and M. T. Telleria and M. Dueñas and A. W. Wilson and M. Padamsee and P. K. Buchanan and G. M. Mueller and M. P. Martín},
 title = {Addressing the diversity of Xylodon raduloides complex through integrative taxonomy},
 journal = {IMA Fungus},
@@ -35,7 +35,49 @@ doi = {10.1186/s43008-019-0010-x},
 year = {2019}
 }
 
-@article{https://doi.org/10.1002/ece3.7737,
+@article{Fernández-López_2023, 
+title={La unión hace la fuerza: modelos de distribución de especies integrando diferentes fuentes de datos: }, 
+volume={32}, 
+url={https://www.revistaecosistemas.net/index.php/ecosistemas/article/view/2527}, 
+DOI={10.7818/ECOS.2527}, 
+number={1}, 
+journal={Ecosistemas}, 
+author={Fernández-López, Javier and Acevedo, Pelayo and Gimenez, Olivier}, 
+year={2023}, 
+month={abr.}, 
+pages={2527} }
+
+@article{Gochanour_2023,
+author = {Gochanour, Benjamin and Fernández-López, Javier and Contina, Andrea},
+title = {abmR: An R package for agent-based model analysis of large-scale movements across taxa},
+journal = {Methods in Ecology and Evolution},
+volume = {14},
+number = {1},
+pages = {218-230},
+keywords = {animal migration, ecology, open-source, R programming, simulations},
+doi = {https://doi.org/10.1111/2041-210X.14014},
+url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.14014},
+eprint = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.14014},
+abstract = {Abstract Agent-based modelling (ABM) shows promise for animal movement studies. However, a robust, open-source and spatially explicit ABM coding platform is currently lacking. We present abmR, an R package for conducting continental-scale ABM simulations across animal taxa. The package features two movement functions, each of which relies on the Ornstein–Uhlenbeck (OU) process. The theoretical background for abmR is discussed and the main functionalities are illustrated using example populations. Potential future additions to this open-source package may include the ability to specify multiple environmental variables or to model interactions between agents. Additionally, updates may offer opportunities for disease ecology and integration with other R movement modelling packages.},
+year = {2023}
+}
+
+@article{Fernández-López_2022,
+author = {Fernández-López, Javier and Blanco-Aguiar, José A. and Vicente, Joaquín and Acevedo, Pelayo},
+title = {Can we model distribution of population abundance from wildlife–vehicles collision data?},
+journal = {Ecography},
+volume = {2022},
+number = {5},
+pages = {e06113},
+keywords = {Capreolus capreolus, detection–non-detection data, road ecology, roe deer, Sus scrofa, ungulates, wild boar, wildlife abundance estimation},
+doi = {https://doi.org/10.1111/ecog.06113},
+url = {https://nsojournals.onlinelibrary.wiley.com/doi/abs/10.1111/ecog.06113},
+eprint = {https://nsojournals.onlinelibrary.wiley.com/doi/pdf/10.1111/ecog.06113},
+abstract = {Reliable estimates of the distribution of species abundance are a key element in wildlife studies, but such information is usually difficult to obtain for large spatial or long temporal scales. Wildlife–vehicle collision (WVC) data is systematically registered in many countries and could be used as a proxy of population abundance if the number of WVC in each territory increase with the population abundance. However, factors such as road density or human population should be controlled to obtain accurate abundance estimations from WVC data. Here, we propose a hierarchical modeling approach using the Royle–Nichols model for detection–non-detection data to obtain population abundance indices from WVC. Relative abundance and individual detectability were modeled for two species, wild boar Sus scrofa and roe deer Capreolus capreolus at 10 × 10 km cells in mainland Spain from WVC data using environmental, anthropological and temporal covariates. For each cell, a detection was annotated if at least one WVC was recorded at each month (used as survey occasion). The predicted abundance indices were compared with raw hunting statistics at region level to assess the performance of the modeling approach. Site specific covariates such as road density or administrative region and the month of the year, affected individual detectability, with higher WVC probability between October and December for wild boar and between April and July for roe deer. Wild boar and roe deer abundance can be explained by both, bioclimatic and land cover covariates. Abundance indices obtained from WVC data were significantly positively correlated with regional raw hunting yields for both species. We presented empirical evidence supporting that accurate wildlife abundance indices at fine spatial resolution can be generated from WVC data when individual detectability is considered in the modeling process.},
+year = {2022}
+}
+
+@article{Fernández-López_2021,
 author = {Fernández-López, Javier and Telleria, M. Teresa and Dueñas, Margarita and May, Tom and Martín, María P.},
 title = {DNA barcode analyses improve accuracy in fungal species distribution models},
 journal = {Ecology and Evolution},
@@ -46,5 +88,79 @@ keywords = {ITS, MaxEnt, natural history collections, species range, species rec
 doi = {https://doi.org/10.1002/ece3.7737},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ece3.7737},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.7737},
+abstract = {Abstract Species distribution models based on environmental predictors are useful to explain a species geographic range. For many groups of organisms, including fungi, the increase in occurrence data sets has generalized their use. However, fungal species are not always easy to distinguish, and taxonomy of many groups is not completely settled. This study explores the effect of taxonomic uncertainty in databases used for modeling fungal distributions. We analyze distribution models for three morphospecies from the corticioid genus Xylodon (Hymenochaetales, Basidiomycota), comparing models based on species names on vouchers specimens with models derived from species identified by DNA barcode. Differences in the contribution of predictors driving the distribution of each modeled taxon and the extent of their ranges were studied. Records under Xylodon paradoxus, X. flaviporus, and X. raduloides were obtained from fungarium collections and GenBank repository. Two grouping criteria were used: (a) specimens were grouped by their collection or sequence voucher names and (b) specimens were grouped following molecular identification using ITS sequences through barcoding gap species recognition (BGSR). Climatic, geographic, and biotic variables were used to predict the potential distribution of each taxon through MaxEnt algorithm. From the three morphospecies selected according to voucher names, up to 19 species candidates were detected using BGSR. Climatic variables were the most important predictors in distribution models made from names on voucher specimens, but their importance decreased when BGSR was applied. In general, the extent of species distributions was more restricted for taxa under BGSR. Our results show that taxonomic uncertainty has a strong effect in Xylodon species distribution models. Misleading results can be obtained when cryptic species or identification errors mask the actual diversity of the presence records. Preserved specimens in natural history collections offer the possibility to assess whether the species name on labels matches the current species recognition criteria.},
 year = {2021}
 }
+
+@article{Palencia_2021,
+author = {Palencia, Pablo and Fernández-López, Javier and Vicente, Joaquín and Acevedo, Pelayo},
+title = {Innovations in movement and behavioural ecology from camera traps: Day range as model parameter},
+journal = {Methods in Ecology and Evolution},
+volume = {12},
+number = {7},
+pages = {1201-1212},
+keywords = {activity, machine learning, mammals, REM, simulation, speed},
+doi = {https://doi.org/10.1111/2041-210X.13609},
+url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.13609},
+eprint = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.13609},
+abstract = {Abstract Camera-trapping methods have been used to monitor movement and behavioural ecology parameters of wildlife. However, when considering movement behaviours to estimate DR is mandatory to include in the formulation the speed ratio, otherwise DR results will be biased. For instance, some wildlife populations present movement patterns characteristic of each behaviour (e.g. foraging or displacement between habitat patches), and further research is needed to integrate the behaviours in the estimation of movement parameters. In this respect, the day range (average daily distance travelled by an individual, DR) is a model parameter that relies on movement and behaviour. This study aims to provide a step forward concerning the use of camera-trapping in movement and behavioural ecology. We describe a machine learning procedure to differentiate movement behaviours from camera-trap data, and revisit the approach to consider different behaviours in the estimation of DR. Second, working within a simulated framework we tested the performance of three approaches to estimate DR: DROB (i.e. estimating DR without behavioural identification), DRTB (i.e. estimating DR by identifying behaviours manually and weighting each behaviour on the basis of the encounter rate obtained) and DRRB (i.e. estimating DR based on the classification of movement behaviours by a machine learning procedure and the ratio between speeds). Finally, we evaluated these approaches for 24 wild mammal species with different behavioural and ecological traits. The machine learning procedure to differentiate behaviours showed high accuracy (mean = 0.97). The DROB approach generated accurate results in scenarios with a speed-ratio (fast relative to slow behaviours) lower than 10, and for scenarios in which the animals spend most of the activity period on the slow behaviour. However, when considering movement behaviours to estimate DR is mandatory to include in the formulation the speed ratio, otherwise the DR results will be biased. The new approach, DRRB, generated accurate results in all the scenarios. The results obtained from real populations were consistent with the simulations. In conclusion, the integration of behaviours and speed-ratio in camera-trap studies makes it possible to obtain unbiased DR. Speed-ratio should be considered so that fast behaviour is not overrepresented. The procedures described in this work extend the applicability of camera-trap-based approaches in both movement and behavioural ecology.},
+year = {2021}
+}
+
+@article{Garrote_2020,
+url = {https://doi.org/10.1515/mammalia-2019-0052},
+title = {Planning the peninsula-wide recovery of the Iberian lynx: identification of favourable habitat areas},
+author = {Germán Garrote and Javier Fernández-López and Eva Rojas and Guillermo López and Miguel Angel Simón},
+pages = {413--420},
+volume = {84},
+number = {5},
+journal = {Mammalia},
+doi = {doi:10.1515/mammalia-2019-0052},
+year = {2020},
+lastchecked = {2024-01-12}
+}
+
+@article{Tellería_2016,
+    doi = {10.1371/journal.pone.0146958},
+    author = {Tellería, José Luis and  Fernández-López, Javier and Fandos, Guillermo},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Effect of climate change on Mediterranean winter ranges of two migratory Passerines},
+    year = {2016},
+    month = {01},
+    volume = {11},
+    url = {https://doi.org/10.1371/journal.pone.0146958},
+    pages = {1-18},
+    abstract = {We studied the effect of climate change on the distribution of two insectivorous passerines (the meadow pipit Anthus pratensis and the chiffchaff Phylloscopus collybita) in wintering grounds of the Western Mediterranean basin. In this region, precipitation and temperature can affect the distribution of these birds through direct (thermoregulation costs) or indirect effects (primary productivity). Thus, it can be postulated that projected climate changes in the region will affect the extent and suitability of their wintering grounds. We studied pipit and chiffchaff abundance in several hundred localities along a belt crossing Spain and Morocco and assessed the effects of climate and other geographical and habitat predictors on bird distribution. Multivariate analyses reported a positive effect of temperature on the present distribution of the two species, with an additional effect of precipitation on the meadow pipit. These climate variables were used with Maxent to model the occurrence probabilities of species using ring recoveries as presence data. Abundance and occupancy of the two species in the study localities adjusted to the distribution models, with more birds in sectors of high climate suitability. After validation, these models were used to forecast the distribution of climate suitability according to climate projections for 2050–2070 (temperature increase and precipitation reduction). Results show an expansion of climatically suitable sectors into the highlands by the effect of warming on the two species, and a retreat of the meadow pipit from southern sectors related to rain reduction. The predicted patterns show a mean increase in climate suitability for the two species due to the warming of the large highland expanses typical of the western Mediterranean.},
+    number = {1},
+
+}
+
+@Article{Fernández-López_2014,
+journal="Hystrix, the Italian Journal of Mammalogy",
+issn="0394-1914",
+volume="25",
+number="1",
+year="2014",
+title="Effect of wildlife refuges on small carnivores in a hunting area  in Mediterranean habitat",
+abstract="Most of Spain is managed for game hunting, an economic activity that is commonly related to predator control. This practice can affect the diversity and abundance of wild carnivores if, despite that hunting is legally focused on some target species, other species are illegally removed. This note evaluates the changes in the structure of carnivore assemblage between wildlife refuges (no predator control) and private areas managed for game production where, because of little regulation, foxes and crows can be eliminated. Our aim is to test if predator control produces a significant change in the presence of foxes (the target species) or whether it also affects other carnivores.",
+author="Fernández-López, Javier
+and Fandos, Guillermo
+and Cano, Luis Santiago
+and García, Francisco José
+and Tellería, José Luis",
+pages="45--46",
+doi="10.4404/hystrix-25.1-9437",
+url="https://doi.org/10.4404/hystrix-25.1-9437"
+}
+
+@article{Garrote_2018,
+  title={Prediction of Iberian lynx road--mortality in southern Spain: a new approach using the MaxEnt algorithm},
+  author={Garrote, Germ{\'a}n and Fern{\'a}ndez--L{\'o}pez, J and L{\'o}pez, G and Ruiz, G and Sim{\'o}n, Miguel Angel},
+  journal={Animal biodiversity and conservation},
+  volume={41},
+  number={2},
+  pages={217--225},
+  year={2018}
+}
+
