--- a/Publications.Rmd
+++ b/Publications.Rmd
@@ -43,7 +43,8 @@ text-align: justify
 ```
 
 <img height=300 width=1600 src="images/moose.png"> </a>
-
-# Publications
+<font size="3">
+<br/>
+## **Publications**
 
 Here you have some selected publications. Find more in my [Google Schoolar](https://scholar.google.es/citations?hl=es&user=v3biyuIAAAAJ) profile or in my [Researchgate](https://www.researchgate.net/profile/Javier_Fernandez-Lopez).
