--- a/docs/tutorials/IBER24.Rmd
+++ b/docs/tutorials/IBER24.Rmd
@@ -38,7 +38,9 @@ text-align: justify
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
- 
+<img src="images/logo_hex.png"> </a>
+<br/>
+
  
 # Presentación
 
